--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
   <app-distancia></app-distancia>
+  <app-zodiaco></app-zodiaco>
+  <app-axb></app-axb>
   <app-root></app-root>
 </body>
 </html>
